completed design and styling for hero on mobile/tablet/desktop screen sizes. made sure shop now button routes correctly

--- a/src/pages/Home/HomePage.scss
+++ b/src/pages/Home/HomePage.scss
@@ -2,9 +2,86 @@
 @use '../../styles/variables' as *;
 
 
-
 .hero {
+    position: relative;
     width: 100%;
+
+        &__img {
+            width: 100%;
+            height: auto;
+
+                @include tablet {
+                    object-fit: cover;
+                    height: 385px;
+                }
+
+                @include desktop {
+                    height: 455px;
+                }
+        }
+    
+        &--overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 98.5%;
+            background-color: rgba(0, 0, 0, 0.3);
+
+                @include tablet {
+                    height: 99%;
+                }
+        }
+
+        &__title {
+            position: absolute;
+            top: 21%;
+            background-color: rgba(0, 0, 0, 0);
+            color: #f9f9ff;
+            text-shadow: 6px 5px 20px rgba(0, 0, 0, 1), 1px 1px 2px #000;
+            width: 243px;
+            font-size: 22px;
+
+                @include tablet {
+                    top: 27%;
+                    font-size: 33px;
+                    width: 49%;
+                }
+
+                @include desktop {
+                    top: 24%;
+                    font-size: 42px;
+                    width: 37%;
+                }
+
+                    &-wrapper {
+                        text-align: center;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                    }
+        }
+
+        &__btn {
+            position: absolute;
+            top: 62%;
+            background-color: #001fbd;
+            color: #f9f9ff;
+            border: 1px solid #001fbd;
+            border-radius: 2px;
+            padding: 5px 15px;
+            width: 32%;
+
+                @include tablet {
+                    top: 61%;
+                    width: 17%;
+                    font-size: 16px;
+                }
+
+                @include desktop {
+                    top: 61%;
+                }
+        }
 }
 
 
